# sarix

./: CHANGELOG.md  main.py  pyproject.toml  setup.py
.github/workflows/: run-python-tests.yml
sarix/: sarix.py
src/sarix/: __init__.py  sarix.py
src/sarixfourier/: __init__.py  sarix_fourier.py  sarix_fourier_model.py
test/: generate_regression_references.py  test_sarix.py  test_sarix_fourier.py
test/fixtures/: reference_fourier.json  reference_simple.json  regression_fourier_seasonal.json  regression_simple_ar1.json
