[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sarix"
version = "0.2.0"
description = "Seasonal AR, Integrated models with eXogenous predictors, with Fourier seasonality support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "iddata @ git+https://github.com/reichlab/iddata",
    "jax>=0.7.2",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "numpyro>=0.19.0",
    "pandas>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5"
]

[tool.uv]
package = true
